# meta-programming-python

./: Brewfile  README.md  package.json  pyproject.toml  slides.md
